# projeto_elt_dbt

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
dbt/: dbt_project.yml
dbt/models/silver/: schema.yml  trabalho_remoto.sql
extraction/: script_v1.py  script_v2.py  script_v3.py
